# facego

./: .gitignore  CLAUDE.md  README.md  app.py  buf.gen.yaml  build.bat  detect.py  docker-compose.yml  download_tool.bat  init.sql  main.py  mediamtx.yml  process.py  push-docker.bat  rtsp_webcam.bat  storage.py  webcam.bat
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
attendance_frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
attendance_frontend/src/: App.tsx
backend/: .dockerignore  Dockerfile  go.mod
backend/common_helpers/: chain_execution.go
backend/configs/: dev.yaml  docker.yaml  production.yaml  sample.yaml
backend_go_legacy/: .gitignore  go.mod
backend_go_legacy/database/: whatsapp_database.go
backend_go_legacy/webutils/: default_interceptor.go  reflector.go
backend_go_legacy/whatsapp_service/: register.go  (+1 more)
backend_python/: .gitignore  alembic.ini  app.py  backend_client.py  ch_logger.py  ch_migrate.py  config.py  config.yaml  database.py  detect.py  face_engine.py  facego.spec  main.py  pyproject.toml  registered_faces.pkl
backend_python/.claude/: settings.local.json
backend_python/alembic/: env.py  script.py.mako
backend_python/alembic/versions/: 0001_create_detection_log.py  0002_update_detection_log_schema.py
backend_python/screens/: __init__.py  add_samples.py  class_select.py  confirm_delete.py  detection_log.py  edit_face.py  face_manager.py  register.py  settings.py  view_face.py
db/: init.sql
(+201 files in other folders)
